--- a/package.json
+++ b/package.json
@@ -111,7 +111,9 @@
     "test": "vscode-test"
   },
   "prettier": {
-    "plugins": ["prettier-plugin-organize-imports"]
+    "plugins": [
+      "prettier-plugin-organize-imports"
+    ]
   },
   "contributes": {
     "breakpoints": [
