Configure auto end-of-line for Prettier
Which cannot be set in .editorconfig.
Also remove old workaround for NPM.

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "test": "vscode-test"
   },
   "prettier": {
+    "endOfLine": "auto",
     "plugins": [
       "prettier-plugin-organize-imports"
     ]
