Add notifyOnAttach option
Adds the new `notifyOnAttach` option for an attach request. This option
will have PSES create a new event with the source identifier
`PSES.Attached` that allows the attached script to wait for the attach
event.

--- a/package.json
+++ b/package.json
@@ -689,6 +689,11 @@
                   ]
                 },
                 "default": []
+              },
+              "notifyOnAttach": {
+                "type": "boolean",
+                "description": "Creates the event 'PSES.Attached' when the debugger attaches to the PowerShell host process. This is useful when creating a script that waits for the debugger to attach.",
+                "default": false
               }
             }
           }
