Add temporaryConsoleWindowActionOnDebugEnd option
Adds a new option `temporaryConsoleWindowActionOnDebugEnd` to both the
attach and launch configurations which can be used to specify what
happens with the temporary integrated console when a debug session ends.
The option can be set to `keep`, current behaviour and default, that
will keep the active terminal as the temporary console. It can be set to
`close` which closes the terminal and removes it from the selection
pane or `hide` which keeps the terminal window alive but changes the
active terminal to the previous one before the debug session started.

--- a/package.json
+++ b/package.json
@@ -581,6 +581,21 @@
                 "type": "string",
                 "description": "If you would like to use a custom coreclr attach debug launch configuration for the debug session, specify the name here. Otherwise a default basic config will be used. The config must be a coreclr attach config. Launch configs are not supported.",
                 "default": false
+              },
+              "temporaryConsoleWindowActionOnDebugEnd": {
+                "type": "string",
+                "description": "Determines whether the temporary PowerShell Extension Terminal is closed when the debugging session ends.",
+                "default": "keep",
+                "enum": [
+                  "close",
+                  "hide",
+                  "keep"
+                ],
+                "enumDescriptions": [
+                  "Closes the temporary PowerShell Extension Terminal when the debugging session ends.",
+                  "Hides the temporary PowerShell Extension Terminal when the debugging session ends and restores the previous window before the debug session had started. This does nothing if the previous window was closed during the debug session.",
+                  "Keeps the temporary PowerShell Extension Terminal open after the debugging session ends."
+                ]
               }
             }
           },
@@ -615,6 +630,21 @@
                 "type": "boolean",
                 "description": "Determines whether a temporary PowerShell Extension Terminal is created for each debugging session, useful for debugging PowerShell classes and binary modules.  Overrides the user setting 'powershell.debugging.createTemporaryIntegratedConsole'.",
                 "default": false
+              },
+              "temporaryConsoleWindowActionOnDebugEnd": {
+                "type": "string",
+                "description": "Determines whether the temporary PowerShell Extension Terminal is closed when the debugging session ends.",
+                "default": "keep",
+                "enum": [
+                  "close",
+                  "hide",
+                  "keep"
+                ],
+                "enumDescriptions": [
+                  "Closes the temporary PowerShell Extension Terminal when the debugging session ends.",
+                  "Hides the temporary PowerShell Extension Terminal when the debugging session ends and restores the previous window before the debug session had started. This does nothing if the previous window was closed during the debug session.",
+                  "Keeps the temporary PowerShell Extension Terminal open after the debugging session ends."
+                ]
               }
             }
           }
