--- a/package.json
+++ b/package.json
@@ -612,7 +612,10 @@
                       "description": "The remote root to map."
                     }
                   },
-                  "required": ["localRoot", "remoteRoot"]
+                  "required": [
+                    "localRoot",
+                    "remoteRoot"
+                  ]
                 },
                 "default": []
               }
@@ -680,7 +683,10 @@
                       "description": "The remote root to map."
                     }
                   },
-                  "required": ["localRoot", "remoteRoot"]
+                  "required": [
+                    "localRoot",
+                    "remoteRoot"
+                  ]
                 },
                 "default": []
               }
