Add note on working around 'artifacts-npm-credprovider' bug

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
+; NOTE: All lines except the registry must be deleted for 'artifacts-npm-credprovider' to work
 ; We generally want to save install/update commands
 save=true
 ; We use a public Azure Artifacts mirror
