Fix marketplace publishing step
This custom task can't use an org-scoped feed,
so I had to make a project-scoped one just for it.
Which is only necessary because the package still isn't cached.

--- a/.pipelines/vscode-powershell-OneBranch.yml
+++ b/.pipelines/vscode-powershell-OneBranch.yml
@@ -54,7 +54,6 @@ extends:
       EnableCDPxPAT: false
       WindowsHostVersion:
         Version: 2022
-        Network: KS3
     release:
       category: NonAzure
     stages:
@@ -180,7 +179,7 @@ extends:
                 feed:
                   organization: msazure
                   project: One
-                  feedName: npmjs
+                  feedName: vsce
             steps:
               - pwsh: |
                   Write-Host Publishing: $(vsixVersion), pre-release: $(prerelease)
