--- a/package.json
+++ b/package.json
@@ -898,6 +898,11 @@
             "type": "boolean",
             "default": false,
             "markdownDescription": "Use correct casing for cmdlets."
+          },
+          "powershell.codeFormatting.removeTrailingWhitespace": {
+            "type": "boolean",
+            "default": false,
+            "markdownDescription": "Removes trailing whitespace from the end of a line."
           }
         }
       },
