--- a/.npmrc
+++ b/.npmrc
@@ -1,8 +1,7 @@
 ; NOTE: All lines except the registry must be deleted for 'artifacts-npm-credprovider' to work
 ; We generally want to save install/update commands
 save=true
-; We use a public Azure Artifacts mirror
+; We use a semi-public Azure Artifacts mirror
 registry=https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell/npm/registry/
-always-auth=true
 ; But we don't want references to it in the lockfile
 omit-lockfile-registry-resolved=true
